objects/ssot__EmailEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionCadenceStepId__c</fullName>
        <label>Action Cadence Step</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BounceReasonText__c</fullName>
        <label>Bounce Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserModel__c</fullName>
        <label>Browser Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserName__c</fullName>
        <label>Browser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BulkEmailMessageId__c</fullName>
        <label>Bulk Email Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CityName__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintSourceName__c</fullName>
        <label>Complaint Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentToken__c</fullName>
        <label>Consent Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryId__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>[DoNotUse]Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCountryId__c</fullName>
        <label>Device Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCountry__c</fullName>
        <label>[DoNotUse]Device Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceIPAddress__c</fullName>
        <label>Device IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLatitude__c</fullName>
        <label>Device Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLocaleId__c</fullName>
        <label>Device Locale</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLongitude__c</fullName>
        <label>Device Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceModelName__c</fullName>
        <label>Device Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DevicePostalCode__c</fullName>
        <label>Device Postal Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceTypeText__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceType__c</fullName>
        <label>[DoNotUse]Device Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalContentComponentId__c</fullName>
        <label>Digital Content Component Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailBounceType__c</fullName>
        <label>Email Bounce Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailClientModel__c</fullName>
        <label>Email Client Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailClientName__c</fullName>
        <label>Email Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailDomainName__c</fullName>
        <label>Email Domain Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailEngagement_LeadlId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailEngagement_LeadlId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>EmailEngagement_LeadlId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>EmailEngagement_LeadlId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__EmailFromAddr__c</fullName>
        <label>Email From Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailFromAddress__c</fullName>
        <label>[DoNotUse]Email From Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailFromName__c</fullName>
        <label>Email From Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessageId__c</fullName>
        <label>Email Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailName__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailRecipientSendStatus__c</fullName>
        <label>Email Recipient Send Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionId__c</fullName>
        <label>Engagement Action</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionReasonText__c</fullName>
        <label>Engagement Action Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetId__c</fullName>
        <label>Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelActionId__c</fullName>
        <label>Engagement Channel Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelAction__c</fullName>
        <label>[DoNotUse]Engagement Channel Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>[DoNotUse]Engagement Channel Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannel__c</fullName>
        <label>[DoNotUse]Engagement Channel</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementDateTime__c</fullName>
        <label>[DoNotUse]Engagement Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementDateTm__c</fullName>
        <label>Engagement Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementEventDirectionId__c</fullName>
        <label>Engagement Event Direction</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementEventDirection__c</fullName>
        <label>[DoNotUse]Engagement Event Direction</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementFlowElementId__c</fullName>
        <label>Engagement Flow Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNbr__c</fullName>
        <label>Engagement Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNotesTxt__c</fullName>
        <label>Engagement Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationId__c</fullName>
        <label>Engagement Publication</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTypeId__c</fullName>
        <label>Engagement Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementVehicleId__c</fullName>
        <label>Engagement Vehicle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementRunId__c</fullName>
        <label>Flow Element Run</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeographicRegion__c</fullName>
        <label>Geographic Region</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IPAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalEngagementActorId__c</fullName>
        <label>Internal Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTestSend__c</fullName>
        <label>Is Test Send</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadlId__c</fullName>
        <label>Lead</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkName__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkURL__c</fullName>
        <label>Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivityId__c</fullName>
        <label>Market Journey Activity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingEmailListId__c</fullName>
        <label>Marketing Email List</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSModelName__c</fullName>
        <label>OS Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSName__c</fullName>
        <label>OS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationContentId__c</fullName>
        <label>Personalization Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationRequestId__c</fullName>
        <label>Personalization Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientIPAddress__c</fullName>
        <label>Recipient IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientMessageId__c</fullName>
        <label>Recipient Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerText__c</fullName>
        <label>[DoNotUse]Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerURL__c</fullName>
        <label>Referrer URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedURL__c</fullName>
        <label>Resolved URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendClassificationId__c</fullName>
        <label>Send Classification</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendtimeEmailAddress__c</fullName>
        <label>Sendtime Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentDateTm__c</fullName>
        <label>Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SessionId__c</fullName>
        <label>Session</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCartId__c</fullName>
        <label>Shopping Cart</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateProvinceId__c</fullName>
        <label>State Province</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateProvinceText__c</fullName>
        <label>[DoNotUse]State Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateProvinceTxt__c</fullName>
        <label>State Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectLineText__c</fullName>
        <label>[DoNotUse]Subject Line Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectLineTxt__c</fullName>
        <label>Subject Line Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetEngagementActorId__c</fullName>
        <label>Target Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskId__c</fullName>
        <label>Task</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnsubscribeReasonText__c</fullName>
        <label>Unsubscribe Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnsubscribeSourceText__c</fullName>
        <label>Unsubscribe Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserAgentText__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebCookieId__c</fullName>
        <label>Web Cookie</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkflowId__c</fullName>
        <label>Workflow</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1692726435898_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelType_Id_map_EmailEngage</label>
        <referenceTo>ssot__EngagementChannelType__dlm</referenceTo>
        <relationshipLabel>EngagementChannelType_Id_map_EmailEngagement_EngagementChannelTypeId_N_1_1643308</relationshipLabel>
        <relationshipName>rel_1692726435898_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149889_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_EmailEngagemen_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_EmailEngagemen_rel</relationshipLabel>
        <relationshipName>rel_1697761149889_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156344_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_Id_map_EmailEngagement_CaseId_N_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>Case_Id_map_EmailEngagement_CaseId_N_rel</relationshipLabel>
        <relationshipName>rel_1697761156344_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>